# fastapi_todo

./: main.py  pyproject.toml
